--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-USAGE: Send POST<br/>
-Example:<br/>
+USAGE: Send SOAP request with composition specification in xml. Request format is discribed in wsdl file at url: www.example.com/wsdl<br/>
+Example of composition specification file:<br/>
 url: http://www.example.com/proces_specification.xml<hr/>
-curl -d "url=http://localhost:3000/experiments/1.xml" http://0.0.0.0:3001
